# spark_validation

./: .gitignore  README.md  pyproject.toml  requirements.txt
schemas/generators/: records.py
schemas/utils/: openapi.py  profiler.py
spark_check/schemas/common/: record.py
spark_check/schemas/scripts/: launch.py
spark_check/validation/: spark_conditions.py  spark_validator.py  types_mapping.py
validation/: spark_decorator.py
